# platform_spi

./: Cargo.toml  README.md
examples/: example_basic.rs
examples/example_basic/: linux.rs  maclinuxshared.rs  macos.rs  unsupported.rs  windows.rs
src/: lib.rs
